--- a/infrastructure/gateway-api/.env
+++ b/infrastructure/gateway-api/.env
@@ -11,3 +11,4 @@ CORS_METHODS=*
 # Microservices endpoints
 AUTH_SERVICE_API=http://localhost:5544/api/v1
 USER_SERVICE_API=http://localhost:6754/api/v1
+LOG_SERVICE_API=http://localhost:5566/api/v1
