--- a/infrastructure/microservices/log-microservice/package.json
+++ b/infrastructure/microservices/log-microservice/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start" : "ts-node src/index.ts",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
