--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "scripts": {
     "start:gateway": "npm --prefix ./infrastructure/gateway-api run start",
     "install:gateway": "npm --prefix ./infrastructure/gateway-api install",
-
     "start:client": "npm --prefix ./client run start",
     "install:client": "npm --prefix ./client install",
-
     "start:microservice:auth": "npm --prefix ./infrastructure/microservices/auth-microservice run start",
     "install:microservice:auth": "npm --prefix ./infrastructure/microservices/auth-microservice install",
     "start:microservice:user": "npm --prefix ./infrastructure/microservices/user-microservice run start",
@@ -17,13 +15,30 @@
     "install:microservice:log": "npm --prefix ./infrastructure/microservices/log-microservice install",
     "start:microservice:production": "npm --prefix ./infrastructure/microservices/production-microservice run start",
     "install:microservice:production": "npm --prefix ./infrastructure/microservices/production-microservice install",
-
     "start": "npm-run-all -p start:microservice:auth start:microservice:user start:microservice:log start:gateway start:microservice:production"
   },
   "engines": {
     "node": ">=14"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/mysql": "^2.15.27",
+    "@types/node": "^25.0.3",
+    "npm-run-all": "^4.1.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "all": "^0.0.0",
+    "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "mysql2": "^3.16.0",
+    "typeorm": "^0.3.28"
   }
 }
