--- a/infrastructure/microservices/processing-microservice/package.json
+++ b/infrastructure/microservices/processing-microservice/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "log-microservice",
+  "name": "processing-microservice",
   "version": "1.0.0",
   "main": "src/index.ts",
   "scripts": {
