--- a/infrastructure/microservices/production-microservice/package.json
+++ b/infrastructure/microservices/production-microservice/package.json
@@ -1,12 +1,9 @@
 {
   "name": "production-microservice",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "main": "src/index.ts",
   "scripts": {
-    "dev": "vite",
-    "start": "ts-node src/index.ts",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "ts-node src/index.ts"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -15,27 +12,8 @@
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.0",
     "nodemon": "^3.1.11",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.28"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.6",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4"
   }
 }
