--- a/infrastructure/gateway-api/.env
+++ b/infrastructure/gateway-api/.env
@@ -13,3 +13,4 @@ AUTH_SERVICE_API=http://localhost:5544/api/v1
 USER_SERVICE_API=http://localhost:6754/api/v1
 LOG_SERVICE_API=http://localhost:5566/api/v1
 PRODUCTION_SERVICE_API=http://localhost:5577/api/v1
+PROCESSING_SERVICE_API=http://localhost:5588/api/v1
