--- a/infrastructure/microservices/log-microservice/package.json
+++ b/infrastructure/microservices/log-microservice/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.0",
     "nodemon": "^3.1.11",
+    "oibproject": "file:../../..",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.28"
