--- a/infrastructure/microservices/performance-microservice/package.json
+++ b/infrastructure/microservices/performance-microservice/package.json
@@ -1,19 +1,31 @@
 {
   "name": "performance-microservice",
   "version": "1.0.0",
+  "description": "Performance analysis microservice for O'Sinjel De Or Parfumerie",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.0",
     "nodemon": "^3.1.11",
+    "oibproject": "file:../../..",
+    "pdfkit": "^0.15.0",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.28"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.6",
+    "@types/pdfkit": "^0.13.5",
+    "typescript": "^5.3.3"
   }
 }
